# CreditCardFraudAI

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
artifacts/explainability/: force.html
config/: config.yaml  logging.yaml
dashboard/: app.py
docs/: api_reference.md  architecture.md  data_dictionary.md  deployment.md  design_decisions.md  ml_pipeline.md
models/metadata/: DecisionTreeClassifier.json  LogisticRegression.json  RandomForestClassifier.json  XGBClassifier.json
notebooks/: 01_Data_Preparation.ipynb  02_EDA.ipynb  02_Preprocessing.ipynb  03_Feature_Engineering.ipynb  04_Model_Training.ipynb  06_Explainable_AI.ipynb  07_AI_Explanation.ipynb
notebooks/models/: DecisionTreeClassifier.pkl  LogisticRegression.pkl  XGBClassifier.pkl
reports/validation/: validation_report.json  validation_report.txt
src/ai/: explanation_engine.py  explanation_models.py  prompt_context.py
src/core/: base.py  config.py  exceptions.py  logger.py
src/data/: loader.py
src/evaluation/: model_comparison.py  model_evaluator.py  model_persistence.py  model_registry.py
src/explainability/: shap_explainer.py
src/features/: feature_engineering.py
src/models/: model_factory.py  model_trainer.py
src/preprocessing/: duplicate_handler.py  imbalance_handler.py  missing_value_handler.py  outlier_handler.py  preprocessing_pipeline.py  scaler.py  train_test_splitter.py
src/validation/: business_rules.py  profiler.py  report_generator.py  schema_validator.py  validation_engine.py
(+5 files in other folders)
